fix: wrong margins when sidebar has `.sidebar-overlaid` class

--- a/scss/sidebar/_sidebar.scss
+++ b/scss/sidebar/_sidebar.scss
@@ -105,17 +105,21 @@
     bottom: 0;
     z-index: $zindex-fixed + 2;
 
+    &:not(.hide) {
+      box-shadow: $box-shadow;
+    }
+
     &:not(.sidebar-end) {
       @include ltr-rtl("left", 0);
       ~ * {
-        --#{$prefix}sidebar-occupy-start: 0;
+        --#{$prefix}sidebar-occupy-start: 0 !important;  // stylelint-disable-line
       }
     }
 
     &.sidebar-end {
       @include ltr-rtl("right", 0);
       ~ * {
-        --#{$prefix}sidebar-occupy-end: 0;
+        --#{$prefix}sidebar-occupy-end: 0 !important;  // stylelint-disable-line
       }
     }
   }
